kubernetes/kustomize/application/overlays/development/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: connexion-app-ingress
  labels:
    app: connexion-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: app.dev.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: connexion-app-svc
              servicePort: 5000
